Updated Web App

--- a/foodOrderWebApp/src/main/resources/templates/userlist.html
+++ b/foodOrderWebApp/src/main/resources/templates/userlist.html
@@ -40,18 +40,28 @@
     <!-- Fixed navbar -->
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">A-HA FOOD</a>
+            <a class="navbar-brand" th:href="@{#}">A-HA FOOD</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav me-auto mb-2 mb-md-0">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" th:href="@{/index}">Home</a>
+                        <a class="nav-link active" aria-current="page" th:href="@{/index}">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" th:href="@{/login}">Log In</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" th:href="@{/signup}">Create Account</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" th:href="@{/menu}">Menu</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Admin</a>
                         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" th:href="@{/userlist}">Show All Users</a></li>
                             <li><a class="dropdown-item" th:href="@{fooditemlist}">Show All Food Items</a></li>
                             <li><a class="dropdown-item" th:href="@{newfooditem}">Create New Food Item</a></li>
                         </ul>
@@ -83,7 +93,8 @@
                                 <th>Last Name</th>
                                 <th>E-mail</th>
                                 <th>Phone</th>
-                                <th>Actions</th>
+                                <th>Role</th>
+                                <th>Action</th>
                             </tr>
                             </thead>
                             <tbody>
@@ -93,6 +104,7 @@
                                 <td th:text="${user.lastName}">Last Name</td>
                                 <td th:text="${user.email}">E-mail</td>
                                 <td th:text="${user.phone}">Phone</td>
+                                <td th:text="${user.roles}">Role</td>
                                 <td>
                                     <a th:href="@{/deleteUser/{id}(id=${user.userId})}">Delete</a>
                                 </td>
