--- a/foodOrderWebApp/src/main/resources/templates/index.html
+++ b/foodOrderWebApp/src/main/resources/templates/index.html
@@ -42,7 +42,7 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav me-auto mb-2 mb-md-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" th:href="@{#}">Home</a>
+                        <a class="nav-link active" aria-current="page" th:href="@{/index}">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" th:href="@{/login}">Log In</a>
