--- a/foodOrderWebApp/src/main/resources/templates/menu.html
+++ b/foodOrderWebApp/src/main/resources/templates/menu.html
@@ -3,15 +3,12 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Sign Up</title>
+
+    <title>A-HA Food</title>
     <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/sticky-footer-navbar/">
-
-    <!--Bootsrap 4 CDN-->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
-    <!--Fontawesome CDN-->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-
+    <!-- Bootstrap core CSS -->
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 
     <style>
         .bd-placeholder-img {
@@ -29,9 +26,8 @@
         }
     </style>
 
-
     <!-- Custom styles for this template -->
-    <link href="login.css" rel="stylesheet">
+    <link href="index.css" rel="stylesheet">
 </head>
 <body class="d-flex flex-column h-100">
 
@@ -78,70 +74,50 @@
 
     <div>
         <div class="d-flex justify-content-center">
-            <div class="card" style="max-width: 400px;">
+            <div class="card" style="min-width: 700px;">
                 <div class="card-header">
-                    <h3 style="text-align: center">Create Account</h3>
+                    <div>
+                        <h3 style="text-align: center">Menu</h3>
+                    </div>
                 </div>
                 <div class="card-body">
-                    <form class="row" th:action="@{/process_register}" method="post" th:object="${user}" >
-                        <div class="alert alert-danger" th:if="${#fields.hasErrors('*')}">
-                            <p th:each="err : ${#fields.errors('*')}" th:text="${err}"></p>
-                        </div>
-
-<!--                        <p style="margin-left:10px">Please Select User Type: </p>-->
-<!--                        <div class="form-check" style="margin:3px">-->
-<!--                            <th:block th:each="role:${listRoles}">-->
-<!--                                <div>-->
-<!--                                <input class="form-check-input" type="checkbox" id="inlineCheckbox1" th:field="*{roles}" th:text="${role.name}" th:value="${role.id}">-->
-<!--                                </div>-->
-<!--                            </th:block>-->
-<!--                        </div>-->
-
-                        <div class="input-group form-group">
-                            <input type="text" class="form-control" placeholder="Username" th:field="*{username}" required th:errorclass="is-invalid">
-                        </div>
-                        <div class="input-group form-group">
-                            <input type="password" class="form-control" placeholder="Password" th:field="*{password}" required th:errorclass="is-invalid">
-                        </div>
-                        <div class="input-group form-group">
-                            <input type="text" class="form-control" placeholder="First Name" th:field="*{firstName}" required th:errorclass="is-invalid">
-                        </div>
-                        <div class="input-group form-group">
-                            <input type="text" class="form-control" placeholder="Last Name" th:field="*{lastName}" required th:errorclass="is-invalid">
-                        </div>
-                        <div class="input-group form-group">
-                            <input type="email" class="form-control" placeholder="Email" th:field="*{email}" required th:errorclass="is-invalid">
-                        </div>
-                        <div class="input-group form-group">
-                            <input type="tel" class="form-control" placeholder="Phone" th:field="*{phone}" required th:errorclass="is-invalid">
-                        </div>
-
-
-                        <div class="form-group" style="justify-items: center">
-                            <input type="submit" value="Sign Up" class="btn float-middle login_btn">
-                        </div>
-                    </form>
+                    <table class="table table-striped table-bordered">
+                        <thead class="thead-dark">
+                        <tr>
+                            <th>Product ID</th>
+                            <th>Name</th>
+                            <th>Description</th>
+                            <th>Price</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr th:each="foodItem : ${foodItems}">
+                            <td th:text="${foodItem.itemId}">ID</td>
+                            <td th:text="${foodItem.itemName}">Name</td>
+                            <td th:text="${foodItem.itemDescription}">Description</td>
+                            <td th:text="${foodItem.itemPrice}">Price</td>
+                        </tr>
+                        </tbody>
+                    </table>
                 </div>
+
                 <div class="card-footer">
                     <div class="d-flex justify-content-center links">
-                        Already have an account?<a th:href="@{/login}">Login</a>
-                    </div>
 
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 </main>
 
+
 <footer class="footer mt-auto py-3 bg-light text-center ">
     <div class="container">
         <span class="text-muted"><i class="fas fa-copyright"></i> 2021 A-Ha Food</span>
     </div>
 </footer>
-
-
 <script src="/js/bootstrap.bundle.min.js"></script>
-
 
 </body>
 </html>
