--- a/foodOrderWebApp/src/main/resources/templates/newfooditem.html
+++ b/foodOrderWebApp/src/main/resources/templates/newfooditem.html
@@ -42,13 +42,23 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav me-auto mb-2 mb-md-0">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" th:href="@{/index}">Home</a>
+                        <a class="nav-link active" aria-current="page" th:href="@{/index}">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" th:href="@{/login}">Log In</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" th:href="@{/signup}">Create Account</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" th:href="@{/menu}">Menu</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Admin</a>
                         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" th:href="@{/userlist}">Show All Users</a></li>
                             <li><a class="dropdown-item" th:href="@{fooditemlist}">Show All Food Items</a></li>
+                            <li><a class="dropdown-item" th:href="@{newfooditem}">Create New Food Item</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
@@ -88,21 +98,16 @@
                         </div>
                     </form>
                 </div>
-<!--                <div class="card-footer">-->
-<!--                    <div class="d-flex justify-content-center links">-->
-<!--                    </div>-->
-
-<!--                </div>-->
             </div>
         </div>
     </div>
 </main>
 
-    <footer class="footer mt-auto py-3 bg-light text-center ">
-        <div class="container">
-            <span class="text-muted"><i class="fas fa-copyright"></i> 2021 A-Ha Food</span>
-        </div>
-    </footer>
+<footer class="footer mt-auto py-3 bg-light text-center ">
+    <div class="container">
+        <span class="text-muted"><i class="fas fa-copyright"></i> 2021 A-Ha Food</span>
+    </div>
+</footer>
 
 
     <script src="/js/bootstrap.bundle.min.js"></script>
