--- a/foodOrderWebApp/src/main/resources/templates/updateFoodItem.html
+++ b/foodOrderWebApp/src/main/resources/templates/updateFoodItem.html
@@ -1,36 +1,114 @@
-<!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<!doctype html>
+<html lang="en" class="h-100" xmlns:th="http://thymeleaf.org">
 <head>
-    <meta charset="ISO-8859-1">
-    <title>Employee Management System</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet"
-          href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <title>A-HA Food</title>
+    <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/sticky-footer-navbar/">
+
+    <!--Bootsrap 4 CDN-->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
+    <!--Fontawesome CDN-->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+
+
+    <style>
+        .bd-placeholder-img {
+            font-size: 1.125rem;
+            text-anchor: middle;
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            user-select: none;
+        }
+
+        @media (min-width: 768px) {
+            .bd-placeholder-img-lg {
+                font-size: 3.5rem;
+            }
+        }
+    </style>
+
+
+    <!-- Custom styles for this template -->
+    <link href="login.css" rel="stylesheet">
 </head>
-<body>
-<div class="container">
-    <h1>Employee Management System</h1>
-    <hr>
-    <h2>Update Employee</h2>
+<body class="d-flex flex-column h-100">
 
-    <form action="#" th:action="@{/new_food_added}" th:object="${foodItem}"
-          method="POST">
+<header>
+    <!-- Fixed navbar -->
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" th:href="@{#}">A-HA FOOD</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarCollapse">
+                <ul class="navbar-nav me-auto mb-2 mb-md-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" th:href="@{/index}">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" th:href="@{/login}">Log In</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" th:href="@{/signup}">Create Account</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" th:href="@{/menu}">Menu</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Admin</a>
+                        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" th:href="@{/userlist}">Show All Users</a></li>
+                            <li><a class="dropdown-item" th:href="@{fooditemlist}">Show All Food Items</a></li>
+                            <li><a class="dropdown-item" th:href="@{newfooditem}">Create New Food Item</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" th:href="@{/logout}">Logout</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+</header>
 
-        <!-- Add hidden form field to handle update -->
-        <input type="hidden" th:field="*{itemId}" />
 
-        <input type="text" th:field="*{itemName}" class="form-control mb-4 col-4">
+<main class="container" style="margin-top: 200px">
+    <div class="d-flex justify-content-center">
 
-        <input type="text" th:field="*{itemDescription}" class="form-control mb-4 col-4">
+        <div>
+            <form class="row" th:action="@{/new_food_added}" th:object="${foodItem}"
+                  method="POST">
 
-        <input type="text" th:field="*{itemPrice}" class="form-control mb-4 col-4">
+                <!-- Add hidden form field to handle update -->
+                <input type="hidden" th:field="*{itemId}" />
 
-        <button type="submit" class="btn btn-info col-2"> Update Employee</button>
-    </form>
+                <input type="text" th:field="*{itemName}" class="form-control col-10">
 
-    <hr>
+                <input type="text" th:field="*{itemDescription}" class="form-control col-10">
 
-    <a th:href = "@{/index}"> Back to Food Item List</a>
-</div>
+                <input type="text" th:field="*{itemPrice}" class="form-control col-10">
+
+                <button type="submit" class="btn btn-dark col-3"> Update Food Item</button>
+            </form>
+        </div>
+    </div>
+</main>
+
+
+
+<footer class="footer mt-auto py-3 bg-light text-center ">
+    <div class="container">
+        <span class="text-muted"><i class="fas fa-copyright"></i> 2021 A-Ha Food</span>
+    </div>
+</footer>
+
+
+<script src="/js/bootstrap.bundle.min.js"></script>
+
+
 </body>
 </html>
