--- a/foodOrderWebApp/src/main/resources/templates/index.html
+++ b/foodOrderWebApp/src/main/resources/templates/index.html
@@ -53,6 +53,9 @@
                     <li class="nav-item">
                         <a class="nav-link" th:href="@{/menu}">Menu</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" th:href="@{#}">Special Offer</a>
+                    </li>
                     <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Admin</a>
                             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
