--- a/foodOrderWebApp/src/main/resources/templates/show_cart.html
+++ b/foodOrderWebApp/src/main/resources/templates/show_cart.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Item List</title>
+    <title>Cart</title>
     <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/sticky-footer-navbar/">
     <!-- Bootstrap core CSS -->
     <link href="/css/bootstrap.min.css" rel="stylesheet">
@@ -72,15 +72,39 @@
         </div>
     </nav>
 </header>
-<div class="container">
-    <div class="text-center mt-3">
-        <table>
-            <tr th:each="image:${allImages}">
-                <td> <img th:src="${image.imageName}"/> </td>
-            </tr>
-        </table>
+
+
+<main class="container" style="margin-top: 200px">
+
+    <div>
+        <div class="d-flex justify-content-center">
+            <div class="card" style="min-width: 400px;">
+                <div class="card-header">
+                    <div>
+                        <h3 style="text-align: center">Your Cart</h3>
+                    </div>
+                </div>
+                <div class="card-body">
+                    <table>
+                        <tr th:each="entry : ${cart}">
+                            <td th:text="${entry.key}"><td>
+                            <td th:text="${entry.value}"><td>
+                        </tr>
+                    </table>
+<!--                    <span>Total amount $</span><span th:text="${dsum}"></span>-->
+                </div>
+
+                <div class="card-footer">
+                    <div class="d-flex justify-content-center links">
+
+                        <p><a class="btn btn-sm btn-primary m-1" th:href="@{/menu}">Menu</a></p>
+                        <p><a class="btn btn-sm btn-danger m-1" th:href="@{#}">Order</a></p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-</div>
+</main>
 
 <footer class="footer mt-auto py-3 bg-light text-center ">
     <div class="container">
