--- a/foodOrderWebApp/src/main/resources/templates/updateFoodItem.html
+++ b/foodOrderWebApp/src/main/resources/templates/updateFoodItem.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>A-HA Food</title>
+    <title>Upload Item</title>
     <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/sticky-footer-navbar/">
 
     <!--Bootsrap 4 CDN-->
@@ -57,6 +57,9 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" th:href="@{/menu}">Menu</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" th:href="@{#}">Special Offer</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Admin</a>
