--- a/foodOrderWebApp/src/main/resources/templates/confirmation.html
+++ b/foodOrderWebApp/src/main/resources/templates/confirmation.html
@@ -9,7 +9,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Cart</title>
+    <title>Menu</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -55,6 +55,11 @@
                             <a class="nav-link" th:href="@{/menu}">Menu</a>
                         </li>
                     </div>
+                    <div sec:authorize="isAuthenticated()">
+                        <li class="nav-item">
+                            <a class="nav-link" th:href="@{/shoppingCart}">Cart</a>
+                        </li>
+                    </div>
 
                     <div sec:authorize="hasAuthority('ADMIN')">
                         <li class="nav-item dropdown">
@@ -73,6 +78,11 @@
                             <a class="nav-link" th:href="@{/logout}">Logout</a>
                         </li>
                     </div>
+                    <div>
+                        <li class="nav-item">
+                            <a class="nav-link" th:href="@{/contact}">Contact Us</a>
+                        </li>
+                    </div>
 
                 </ul>
             </div>
@@ -81,41 +91,44 @@
 </header>
 
 
-<main class="container" style="margin-top: 200px">
 
+<main class="container" style="margin-top: 100px">
     <div>
-        <div class="d-flex justify-content-center">
-            <div class="card" style="min-width: 400px;">
-                <div class="card-header">
-                    <div>
-                        <h3 style="text-align: center">Your Cart</h3>
-                    </div>
-                </div>
-                <div class="card-body">
-                    <table>
-                        <tr th:each="entry : ${cart}">
-                            <td th:text="${entry.key}"><td>
-                            <td th:text="${entry.value}"><td>
-                        </tr>
-                    </table>
-<!--                    <span>Total amount $</span><span th:text="${dsum}"></span>-->
-                </div>
-
-                <div class="card-footer">
-                    <div class="d-flex justify-content-center links">
-
-                        <p><a class="btn btn-sm btn-primary m-1" th:href="@{/menu}">Menu</a></p>
-                        <p><a class="btn btn-sm btn-danger m-1" th:href="@{#}">Order</a></p>
-                    </div>
-                </div>
-            </div>
+        <h3 style="text-align: center">Thanks for placing the order</h3>
+        <h5 style="text-align: center">Your order will be ready to be picked up within 10 mins.</h5>
+    </div>
+    <div>
+        <table class="table table-hover table-responsive-xl">
+            <thead class="thead-dark">
+            <tr>
+                <th>Name</th>
+                <th>Description</th>
+                <th>Price</th>
+                <th>Quantity</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="item : ${items.entrySet()}">
+                <td th:text="${item.getKey().itemName}" th:href="${item.getKey().itemId}">Name</td>
+                <td th:text="${item.getKey().itemDescription}">Description</td>
+                <td th:text="${item.getKey().itemPrice}">Price</td>
+                <td th:text="${item.getValue()}">Quantity</td>
+            </tr>
+            </tbody>
+        </table>
+        <div class="row panel-body">
+            <h4 class="col-md-11" th:inline="text">Total: $[[${total}]]</h4>
         </div>
     </div>
 </main>
 
-<footer class="footer mt-auto py-3 bg-light text-center fixed-bottom">
+
+<footer class="footer text-center fixed-bottom" style="background-color:brown;">
     <div class="container">
-        <span class="text-muted"><i class="fas fa-copyright"></i> 2021 A-Ha Food</span>
+        <i class="fab fa-facebook-square fa-lg"></i>
+        <i class="fab fa-twitter-square fa-lg"></i>
+        <i class="fab fa-pinterest-square fa-lg"></i>
+        <p id="copyright"><i class="fas fa-copyright"></i> 2021 A-Ha Food</p>
     </div>
 </footer>
 
