--- a/foodOrderWebApp/src/main/resources/templates/update_item.html
+++ b/foodOrderWebApp/src/main/resources/templates/update_item.html
@@ -55,6 +55,11 @@
                             <a class="nav-link" th:href="@{/menu}">Menu</a>
                         </li>
                     </div>
+                    <div sec:authorize="isAuthenticated()">
+                        <li class="nav-item">
+                            <a class="nav-link" th:href="@{/shoppingCart}">Cart</a>
+                        </li>
+                    </div>
 
                     <div sec:authorize="hasAuthority('ADMIN')">
                         <li class="nav-item dropdown">
@@ -105,9 +110,12 @@
 
 
 
-<footer class="footer mt-auto py-3 bg-light text-center fixed-bottom">
+<footer class="footer text-center fixed-bottom" style="background-color:brown;">
     <div class="container">
-        <span class="text-muted"><i class="fas fa-copyright"></i> 2021 A-Ha Food</span>
+        <i class="fab fa-facebook-square fa-lg"></i>
+        <i class="fab fa-twitter-square fa-lg"></i>
+        <i class="fab fa-pinterest-square fa-lg"></i>
+        <p id="copyright"><i class="fas fa-copyright"></i> 2021 A-Ha Food</p>
     </div>
 </footer>
 
