--- a/foodOrderWebApp/src/main/resources/templates/index.html
+++ b/foodOrderWebApp/src/main/resources/templates/index.html
@@ -96,23 +96,57 @@
 <main class="container box">
     <div class="row">
         <div class="col-4">
-            <div class="card text-dark mb-3" style="margin-top: 200px" >
+            <div class="card text-dark" style="margin-top: 180px" >
                 <div class="card">
                     <div class="card-body  bg-light">
                         <h5 class="card-title">Made Food With Love</h5>
-                        <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facere cumque optio quis fugiat! Corrupti error distinctio non provident quia expedita recusandae magnam dolores commodi architecto, fugiat at possimus eligendi nisi!</p>
+                        <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facere cumque optio quis fugiat! Corrupti error distinctio non provident quia expedita recusandae magnam dolores commodi architecto.</p>
                     </div>
                 </div>
             </div>
         </div>
 
         <div class="col-8">
-            <div class="container" style="margin-top: 100px; margin-left: 100px">
-                <img src="/img/g-1.jpg" class="rounded" alt="Food" width="700" height="500">
+            <div class="container" style="margin-top: 80px; margin-left: 100px">
+                <img src="/img/g-1.jpg" class="rounded" alt="Food" width="600" height="450">
             </div>
 
         </div>
 
+    </div>
+
+    <div class="container box">
+        <div class="row-flex">
+            <div class="feedback mt-5 mb-1 p-1 border bg-light">
+                <h3>
+                    Email
+                </h3>
+                <p>
+                    <a href = "mailto:tanvir@yahoo.com?subject = Feedback&body = Message">
+                        <button type="submit" class="btn btn-outline-dark">Send Feedback</button>
+                    </a>
+                </p>
+            </div>
+            <div class="opening-time my-1 p-1 border bg-light">
+                <h3>
+                    Opening Times
+                </h3>
+                <p>
+                    <span>Monday—Thursday: 08:00 — 22:00</span>
+                    <span>Friday—Saturday: 09:00 — 23:00 </span>
+                    <span>Sunday: 10:00 — 17:00</span>
+                </p>
+            </div>
+            <div class="contact-address my-1 p-1 border bg-light">
+                <h3>
+                    Location
+                </h3>
+                <p>
+                    <span>2237 Edgemont Ave,</span>
+                    <span>Waterloo, 50702 IA</span>
+                </p>
+            </div>
+        </div>
     </div>
 </main>
 
